--- a/src/SSS.Application/SSS.Application.csproj
+++ b/src/SSS.Application/SSS.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SSS.Domain\SSS.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
