--- a/src/SSS.Infrastructure/SSS.Infrastructure.csproj
+++ b/src/SSS.Infrastructure/SSS.Infrastructure.csproj
@@ -20,6 +20,7 @@
 		</PackageReference>
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.0" />
+		<PackageReference Include="MongoDB.Driver" Version="3.6.0" />
 
 		<!-- Configuration & Options -->
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
