--- a/src/SSS.Infrastructure/SSS.Infrastructure.csproj
+++ b/src/SSS.Infrastructure/SSS.Infrastructure.csproj
@@ -33,6 +33,7 @@
 		<PackageReference Include="Google.Cloud.Storage.V1" Version="4.13.0" />
 		<PackageReference Include="Google.Apis.Auth" Version="1.72.0" />
 		<PackageReference Include="MailKit" Version="4.13.0" />
+		<PackageReference Include="OpenAI" Version="2.8.0" />
 		<PackageReference Include="payOS" Version="1.0.9" />
 
 		<!-- API Framework -->
