--- a/src/SSS.Infrastructure/SSS.Infrastructure.csproj
+++ b/src/SSS.Infrastructure/SSS.Infrastructure.csproj
@@ -21,6 +21,7 @@
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.0" />
 		<PackageReference Include="MongoDB.Driver" Version="3.6.0" />
+		<PackageReference Include="StackExchange.Redis" Version="2.8.0" />
 
 		<!-- Configuration & Options -->
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
@@ -34,7 +35,7 @@
 		<PackageReference Include="Google.Apis.Auth" Version="1.72.0" />
 		<PackageReference Include="MailKit" Version="4.13.0" />
 		<PackageReference Include="payOS" Version="1.0.9" />
-
+		
 		<!-- API Framework -->
 		<PackageReference Include="FastEndpoints" Version="5.24.0" />
 		<PackageReference Include="FastEndpoints.Swagger" Version="5.24.0" />
